--- a/GraduationThesis/GraduationThesis.BackendApi/appsettings.json
+++ b/GraduationThesis/GraduationThesis.BackendApi/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "GraduationThesisDB": "Server=HUYNHANH\\SQLEXPRESS;Database=GraduationThesis;Trusted_Connection=True;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
